<resources>
    <string name="app_name">Baking Time</string>


    <!-- main UI  -->
    <string name="main_activity_show_serving">servings ：</string>

    <!-- child UI -->
    <string name="child_activity_show_prepare">preparation</string>

    <!-- used for designed -->
    <!-- main activity -->
    <string name="designed_show_name_recipe">蛋糕</string>
    <string name="designed_button_video">相关视频</string>
    <string name="designed_button_step">详细步骤</string>
    <string name="designed_button_materials">准备原料</string>
    <string name="designed_show_serving">可用餐人数：8</string>
    <string name="designed_text_view_prepare">Prepare</string>
    <!-- step activity -->
    <string name="designed_text_view_prepare_content">1. salt  2.     3.Aasfasvasvasvasvasvsavas</string>

    <string name="designed_text_view_step">step firest test hah</string>
    <string name="text_view_step_title">Steps</string>

    <!-- video activity -->
    <string name="designed_text_video_description">this movie shows us something</string>
    <string name="designed_button_last">Last</string>
    <string name="designed_button_next">Next</string>

    <string name="button_last">Last Video</string>
    <string name="button_next">Next Video</string>

    <string name="show_wrong_dialog_last">This is the first Video</string>
    <string name="show_wrong_dialog_next">This is the final Video</string>


    <!-- values of fragment_card_food_recipe -->
    <!-- TextView -->
    <string name="text_view_layout_width">120dp</string>


    <string name="card_view_col">1</string>

    <!-- widget -->
    <string name="widget_but">换一个</string>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
</resources>
