<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/video_description"
        android:layout_width="match_parent"
        android:layout_height="84dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/video_step"
        tools:text="@string/designed_text_video_description" />

    <Button
        android:id="@+id/video_next_but"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:layout_marginTop="8dp"
        android:onClick="jumpToNext"
        android:text="@string/button_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/video_description"
        tools:text="@string/designed_button_last" />

    <Button
        android:id="@+id/video_last_but"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="8dp"
        android:onClick="jumpToLast"
        android:text="@string/button_last"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/video_description"
        tools:text="@string/designed_button_next" />

    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
        android:id="@+id/video_step"
        android:layout_width="match_parent"
        android:layout_height="334dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>

