<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.baking.StepsActivity">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/child_activity_show_prepare"
        android:background="@color/color_step"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/prepare_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/designed_text_view_prepare_content"/>

    <TextView
        android:layout_height="25dp"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:text="@string/text_view_step_title"
        android:background="@color/color_step"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recipe_step_recycle"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>

</LinearLayout>
